--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "node server.js",
-  "server": "nodemon server.js",
- "test": "echo \"Error: no test specified\" && exit 1"
+  "server": "nodemon server.js"
   },
   "browserslist": {
     "production": [
