--- a/package.json
+++ b/package.json
@@ -1,41 +1,23 @@
 {
-  "name": "field-visit-tracker",
+  "name": "visitpilot-backend",
   "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.17.1",
-    "@mui/material": "^5.17.1",
-    "@react-google-maps/api": "^2.18.1",
-    "@react-oauth/google": "^0.12.1",
-    "axios": "^1.8.3",
-    "framer-motion": "^12.5.0",
-    "cors": "^2.8.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.3.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^4.2.4"
-  },
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-  "server": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+  "bcryptjs": "^2.4.3",
+  "cors": "^2.8.5",
+  "dotenv": "^16.0.3",
+  "express": "^4.18.2",
+  "jsonwebtoken": "^9.0.0",
+  "mongoose": "^7.2.2",
+  "multer": "1.4.5-lts.1",
+  "passport": "^0.6.0",
+  "passport-google-oauth20": "^2.0.0"
+},
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
